Added a table and image

--- a/test.html
+++ b/test.html
@@ -38,6 +38,24 @@
             &nbsp&nbsp Getting the code by <a href="">anonymous FTP</a> ,etc
 
         </p>
+        <img src="mountain.jpg" alt="mountain" title="mountain" width="300">
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Phone number</th>
+                <th>Town/City</th>
+            </tr>
+            <tr>
+                <td>John Smith</td>
+                <td>0725476234</td>
+                <td>Nairobi</td>
+            </tr>
+            <tr>
+                <td>Betty Longfellow</td>
+                <td>0756745362</td>
+                <td>Nakuru</td>
+            </tr>
+        </table>
         
 
     </body>
